--- a/master-interview/src/Javascript/闭包.md
+++ b/master-interview/src/Javascript/闭包.md
@@ -6,3 +6,31 @@ nav:
 ---
 
 ## 闭包
+
+`闭包`是指有权访问另一个函数`作用域`内`变量`的函数，创建`闭包`的最常见的方式就是在一个函数内创建另一个函数，创建的函数可以 访问到当前函数的局部变量。
+
+`闭包`有两个常用的用途。
+
+- `闭包`的第一个用途是使我们在函数`外部`能够访问到函数`内部`的变量。通过使用`闭包`，我们可以通过在外部调用闭包函数，从而在外部访问到函数`内部`的变量，可以使用这种方法来创建`私有变量`。
+
+- 函数的另一个用途是使已经运行结束的函数上下文中的`变量`对象继续留在`内存`中，由于v8的预编译机制，在遇到闭包变量时，会把闭包 变量储存在堆内存中。因为闭包函数保留了这个变量对象的引用，使得所以这个变量对象不会被回收。
+
+```js
+
+function a(){
+    var n = 0;
+    function add(){
+       n++;
+       console.log(n);
+    }
+    return add;
+}
+var a1 = a(); //注意，函数名只是一个标识（指向函数的指针），而（）才是执行函数；
+a1();    //1
+a1();    //2  第二次调用n变量还在内存中
+
+```
+
+闭包的本质就是作用域链的应用，想要深入理解闭包只要明白作用域链的创建就可轻松了解。
+
+## 未完待续.....
