--- a/master-interview/src/大厂Coding原题/手写订阅发布模式-头条.md
+++ b/master-interview/src/大厂Coding原题/手写订阅发布模式-头条.md
@@ -71,3 +71,82 @@ event.emit("dbClick");
 event.emit("dbClick");
 
 ```
+
+```jsx
+import React from 'react';
+import { Button,message,Space,Switch  } from 'antd';
+class EventEmitter {
+  constructor() {
+    this.events = {};
+  }
+  // 实现订阅
+  on(type, callBack) {
+    if (!this.events) this.events = Object.create(null);
+
+    if (!this.events[type]) {
+      this.events[type] = [callBack];
+    } else {
+      this.events[type].push(callBack);
+    }
+  }
+  // 删除订阅
+  off(type, callBack) {
+    if (!this.events[type]) return;
+    this.events[type] = this.events[type].filter(item => {
+      return item !== callBack;
+    });
+  }
+  // 只执行一次订阅事件
+  once(type, callBack) {
+    function fn() {
+      callBack();
+      this.off(type, fn);
+    }
+    this.on(type, fn);
+  }
+  // 触发事件
+  emit(type, ...rest) {
+    this.events[type] && this.events[type].forEach(fn => fn.apply(this, rest));
+  }
+}
+// 使用如下
+const event = new EventEmitter();
+
+const handle = (...rest) => {
+  message.success(rest)
+  console.log(rest);
+};
+
+const hanldeClick=(e)=>{
+  console.log(e)
+  if(e){
+    event.on('click',handle)
+  }else{
+    event.off('click',handle)
+  }
+}
+
+const handleClickOnce=()=>{
+  event.once('dbClick',()=>{message.success("您的鸡腿到啦🍖")});
+  message.success("您订阅了🍖,但是只有一次哦")
+}
+
+export default () => {
+  return (
+    <>
+      <Space>
+        <Switch checkedChildren="订阅" unCheckedChildren="取消" onClick={hanldeClick} />
+        <Button type="primary" onClick={()=>{event.emit('click','客官您的菜来啦🍗🍟🍻')}}>发布</Button>
+      </Space>
+      <br />
+      <br />
+      <Space>
+        <Button  onClick={handleClickOnce}>订阅一次</Button>
+        <Button type="primary" onClick={()=>{event.emit('dbClick')}}>发布</Button>
+      </Space>
+    </>
+  )
+}
+
+
+```
