add：异步编程、模块化

--- a/master-interview/src/Javascript/模块化.md
+++ b/master-interview/src/Javascript/模块化.md
@@ -6,3 +6,88 @@ nav:
 ---
 
 ## 模块化
+
+### CommonJS
+`CommonJs` 是 `Node` 独有的规范，浏览器中使用就需要用到 `Browserify `解析了。
+- 常见规范
+  - 一个文件就是一个模块，拥有单独的作用域
+  - 普通方式定义的 变量、函数、对象都属于该模块内
+  - 通过 require 来加载模块
+  - 通过 exports 和 module.exports（批量导出） 来暴露模块中的内容
+
+```js
+// a.js 批量导出
+module.exports = {
+    a: 1
+}
+// or 单个导出
+exports.a = 1
+
+// b.js
+var module = require('./a.js')
+module.a // -> log 1
+
+```
+
+### ES6的模块化
+在有 `Babel` 的情况下，我们可以直接使用 `ES6` 的模块化
+```js
+// file a.js
+export function a() {}
+export function b() {}
+// file b.js
+export default function() {}
+
+import {a, b} from './a.js'
+import XXX from './b.js'
+```
+`export`可以导出的是一个对象中包含的多个 属性，方法。
+`export default`  只能导出 一个 可以不具名的 对象。
+`import {fn} from './xxx/xxx'`  ( export 导出方式的 引用方式 )
+`import fn from './xxx/xxx1' `   ( export default 导出方式的 引用方式 )
+
+
+### AMD-RequireJS 
+前置加载，主要解决：
+- 多个js文件可能有依赖关系，被依赖的文件需要早于依赖它的文件加载到浏览器。
+- js加载的时候浏览器会停止页面渲染，加载文件愈多，页面失去响应的时间愈长。
+
+```js
+// 定义模块
+define(['myModule'],() => {
+  var name = 'Byron';
+  function printName(){
+     console.log(name);
+}
+  return {
+     printName:printName
+   }
+})
+
+// 加载模块
+require(['myModule'],function(my){
+   my.printName();
+})
+```
+
+### CMD-SeaJS 
+
+CMD推崇依赖就近，所以一般不在define的参数中写依赖，而是在factory中写。factory有三个参数：
+function(require, exports, module){}
+
+```js
+// 定义模块  myModule.js
+define(function(require, exports, module) {
+  var $ = require('jquery.js')
+  $('div').addClass('active');
+});
+
+// 加载模块
+seajs.use(['myModule.js'], function(my){
+
+});
+```
+
+AMD和CMD最大的区别是对依赖模块的执行时机处理不同，注意不是加载的时机或者方式不同
+
+很多人说`requireJS`是异步加载模块，`SeaJS`是同步加载模块，这么理解实际上是不准确的，其实加载模块都是异步的，只不过`AMD`依赖前置，js可以方便知道依赖模块是谁，立即加载，而`CMD`就近依赖，需要使用把模块变为字符串解析一遍才知道依赖了那些模块，这也是很多人诟病`CMD`的一点，牺牲性能来带来开发的便利性，实际上解析模块用的时间短到可以忽略。
