--- a/master-interview/src/大厂Coding/手写防抖节流函数.md
+++ b/master-interview/src/大厂Coding/手写防抖节流函数.md
@@ -18,10 +18,9 @@ nav:
    let timer = null
    return function() {
      let _this = this // 这获取 this 是因为 debounce() 返回的是内部函数，在这才能捕获到 this。
-     let args = Array.prototype.slice.call(arguments)
      if (timer) clearTimeout(timer) // 取消之前的 timer
      timer = setTimeout(function () {
-       fn.call(_this, ...args) // 防止 this 指向改变，确保上下文为当前的this，传递参数
+       fn.call(_this, ...arguments) // 防止 this 指向改变，确保上下文为当前的this，传递参数
      }, delay)
    }
  }
@@ -35,10 +34,9 @@ function debounce(fn, delay) {
    let timer = null
    return function() {
      let _this = this // 这获取 this 是因为 debounce() 返回的是内部函数，在这才能捕获到 this。
-     let args = Array.prototype.slice.call(arguments)
      if (timer) clearTimeout(timer) // 取消之前的 timer
      timer = setTimeout(function () {
-       fn.call(_this, ...args) // 防止 this 指向改变，确保上下文为当前的this，传递参数
+       fn.call(_this, ...arguments) // 防止 this 指向改变，确保上下文为当前的this，传递参数
      }, delay)
    }
 }
@@ -73,11 +71,10 @@ function throtting(fn, delay) {
      if (isCancel) return
      isCancel = true
      clearTimeout(timer)
-     let self = this;
-     let args = Array.prototype.slice.call(arguments)
+     let _this = this;
      if (timer) clearTimeout(timer)
      timer = setTimeout(function () {
-       fn.call(self, ...args)
+       fn.call(_this, ...arguments)
        isCancel = false
      }, delay)
    }
@@ -94,11 +91,10 @@ function throtting(fn, delay) {
      if (isCancel) return
      isCancel = true
      clearTimeout(timer)
-     let self = this;
-     let args = Array.prototype.slice.call(arguments)
+     let _this = this;
      if (timer) clearTimeout(timer)
      timer = setTimeout(function () {
-       fn.call(self, ...args)
+       fn.call(_this, ...arguments)
        isCancel = false
      }, delay)
    }
