add：事件循环、模块化

--- a/master-interview/src/Javascript/事件循环.md
+++ b/master-interview/src/Javascript/事件循环.md
@@ -5,4 +5,111 @@ nav:
   path: /konwledge
 ---
 
-## 事件循环
+## 事件循环-event loop
+
+- 名词对照表
+  - Heap：堆
+  - Stack：栈
+  - Queue：队列
+  - MacroTask：宏任务
+  - MicroTask：微任务
+  - main thread：主线程
+  - call-stack：执行栈
+
+### 宏任务（Macrotasks）与微任务（Microtasks）
+在JavaScript中，任务被分为两种，一种`宏任务（MacroTask）`也叫Task，一种叫`微任务（MicroTask）`。
+他们包含以下api
+- microtasks
+  - process.nextTick（node）
+  - promise
+  - Object.observe (废弃)
+  - MutationObserver（监听dom变动）
+
+- macrotasks
+  - srcipt代码
+  - setTimeout
+  - setImmediate
+  - setInterval
+  - I/O
+  - UI 渲染
+
+
+### 浏览器的event-loop
+
+Javascript单线程任务被分为`同步任务`和`异步任务`，`同步任务`会在调用栈中按照顺序等待主线程依次执行，`异步任务`会在异步任务有了结果后，将注册的回调函数放入任务队列中等待主线程空闲的时候（调用栈被清空），被读取到栈内等待主线程的执行。
+
+执行栈在执行完同步任务后，查看执行栈是否为空，如果执行栈为空，就会去检查`微任务(microTask)`队列是否为空，如果为空的话，就执行`Task（宏任务）`，否则就一次性执行完所有微任务。
+每次单个宏任务执行完毕后，检查`微任务(microTask)`队列是否为空，如果不为空的话，会按照先入先出的规则全部执行完`微任务(microTask)`后，设置`微任务(microTask)`队列为null，然后再执行`宏任务`，如此循环。
+
+![my-logo.png](https://user-gold-cdn.xitu.io/2019/1/18/16860ae5ad02f993?imageslim)
+
+
+下面来看个例子
+
+```js
+// 1. 开始执行
+console.log(1)	// 	2. 打印 1
+setTimeout(function () {	// 6. 浏览器在 0ms 后，将该函数推入任务队列
+    console.log(2)	// 7. 打印 2
+    Promise.resolve(1).then(function () {	// 8. 将 resolve(1) 推入任务队列  9. 将 function函数推入任务队列
+        console.log('ok')	// 10. 打印 ok
+    })
+})	// 3.调用 setTimeout 函数，并定义其完成后执行的回调函数
+setTimeout(function (){		// 11. 浏览器 0ms 后，将该函数推入任务队列
+    console.log(3)	// 12. 打印 3
+})  // 4. 调用 setTimeout 函数，并定义其完成后执行的回调函数
+// 5. 主线程执行栈清空，开始读取 任务队列 中的任务
+// output： 1  2 ok 3
+```
+
+### 真题练习
+```js
+console.log('script start')
+let promise1 = new Promise(function (resolve) {
+    console.log('promise1')
+    resolve()
+    console.log('promise1 end')
+}).then(function () {
+    console.log('promise2')
+})
+setTimeout(function(){
+    console.log('settimeout')
+})
+console.log('script end')
+```
+
+```jsx
+import React from 'react';
+import { Button,message,Space,Switch  } from 'antd';
+
+const code=()=>{
+  alert('script start')
+  let promise1 = new Promise(function (resolve) {
+      alert('promise1')
+      resolve()
+      alert('promise1 end')
+  }).then(function () {
+      alert('promise2')
+  })
+  setTimeout(function(){
+      alert('settimeout')
+  })
+  alert('script end')
+}
+
+export default () => {
+  return (
+    <>
+      <Button type="primary" onClick={code}>运行</Button>
+    </>
+  )
+}
+```
+
+`Promise`本身是同步的立即执行函数， 当在 `executor` 中执行 `resolve` 或者 `reject`的时候, 此时是异步操作， 会先执行 `then/catch` 等，当主栈完成后，才会去调用 `resolve/reject` 中存放的方法执行
+
+当JS主线程执行到Promise对象时，
+- promise1.then() 的回调就是一个 task
+- promise1 是 resolved 或 rejected ：那这个 task 就会放入当前事件循环回合的 microtask queue
+- promise1 是 pending：这个 task 就会放入 事件循环的未来的某个(可能下一个)回合的 microtask queue 中
+- setTimeout 的回调也是个 task ，它会被放入 macrotask queue 即使是 0ms 的情况
