--- a/master-interview/src/Javascript/持久储存.md
+++ b/master-interview/src/Javascript/持久储存.md
@@ -5,4 +5,130 @@ nav:
   path: /konwledge
 ---
 
-## 持久储存cookie
+## 持久储存
+
+#### 	cookie
+
+Cookie是服务器发送到浏览器的一小段数据，会在浏览器下次向同一服务器再发起请求时被携带并发送到服务器上。
+
+- 一般由服务器生成，可以设置失效时间，如果是浏览器生成则默认浏览器关闭后失效；
+
+- 与服务器端通信，每次请求都放在 http 请求头中；
+
+- 数据存储在内存中，数据大小为4KB,以字符串的形式存储，在字符串中以 `key=value` 的形式出现；每一个 `key=value` 是一条数据,多个数据之间以分号分割
+
+  ```js
+  // cookie 的形态
+  'a=100; b=200; c=300;'
+  ```
+
+  ​	注:因为一些前端交互的需要，后来cookie也被用于存储一些客户端的数据。Cookie的原生api不友好，需要自行封装一下。下面是封装后的方法。
+
+  ```js
+  //添加cookie的方法
+  function addcookie(key, value, day) {
+      var d = new Date();
+      d.setDate(d.getDate() + day);
+      document.cookie = key + '=' + value + ';expires=' + d;
+  }
+  //获取cookie的方法
+  function getcookie(key) {
+      var arr = document.cookie.split('; ');
+      for (var i = 0; i < arr.length; i++) {
+          var newarr = arr[i].split('=');
+          if (newarr[0] === key) {
+              return newarr[1];
+          }
+      }
+  }
+  //删除cookie的方法
+  function delcookie(key) {
+      addcookie(key, '', -1);
+  }
+  ```
+
+#### localStorage
+
+- `localStorage`不会把数据发给服务器，仅在本地保存
+
+- `localStorage`的生命周期是永久的，关闭页面或浏览器之后`localStorage`中的数据也不会消失。`localStorage`除非主动删除数据，否则数据永远不会消失。
+
+- `localStorage`只能存储字符串类型，对于复杂的对象可以使用ECMAScript提供的JSON对象的stringify和parse来处理
+
+- `localStorage`为永久保存
+
+- 有内置的API,例如 `setItem()`、`getItem()` 和 `removeItem()`等,不需要自己封装方法
+  - 储存数据
+    用途: 将 `value`存储到 `key`字段
+    用法: `setItem( key, value)`
+
+    ```js
+    localStorage.setItem('key', 'value');
+    sessionStorage.setItem('key', 'value');
+    ```
+
+  - 取出数据
+    用途: 获取指定 `key`本地存储的值
+    用法: `getItem(key)`
+
+    ```js
+    localStorage.getItem('key');
+    sessionStorage.getItem('key');
+    ```
+
+  - 修改数据
+
+    用途: 修改指定 `key`本地存储的值
+    用法:`setItem(key)`
+
+    ```js
+    localStorage.setItem('key', 'newVal');
+    sessionStorage.setItem('key', 'newVal');
+    ```
+
+  - 删除数据
+    用途: 删除指定 `key`本地存储的值
+    用法: `removeItem(key)`
+
+    ```js
+    localStorage.removeItem('key');
+    sessionStorage.removeItem('key');
+    ```
+
+  - 清除数据
+    用途: 清除所有本地存储的数据
+    用法: `clear()`
+
+    ```js
+    localStorage.clear();
+    sessionStorage.clear();
+    ```
+
+### 		sessionStorage
+
+- `sessionStorage`对象存储特定于某个会话的数据,也就是该数据只保持到浏览器关闭
+
+- `sessionStorage`不会把数据发给服务器，仅在本地保存
+
+- `sessionStorage`只能存储字符串类型，对于复杂的对象可以使用ECMAScript提供的JSON对象的stringify和parse来处理
+
+- `sessionStorage`为临时保存
+
+- 和`localStorage`一样有内置的API,例如 `setItem()`、`getItem()` 和 `removeItem()`等,不需要自己封装方法
+
+  　　特性：
+
+  - 关闭浏览器`sessionStorage`失效；
+  - 页面刷新不会消除数据；
+  - 只有在当前页面打开的链接，才可以访`sessionStorage`的数据，使用window.open打开页面和改变localtion.href方式都可以获 取到`sessionStorage`内部的数据;
+
+总结:
+
+|     特性     |                   cookie                   |      `localStorage`      | `sessionStorage` |
+| :----------: | :----------------------------------------: | :----------------------: | :--------------: |
+| 数据生命周期 |     一般由服务器生成，可以设置过期时间     | 除非被清理，否则一直存在 |  页面关闭就清理  |
+| 数据存储大小 |                     4K                     |            5M            |        5M        |
+| 与服务端通信 | 每次都会携带在 header 中，对于请求性能影响 |          不参与          |      不参与      |
+|     API      |                  自己封装                  |         自带API          |     自带API      |
+
+从上表可以看到，`cookie` 已经不建议用于存储。如果没有大量数据存储需求的话，可以使用 `localStorage` 和 `sessionStorage` 。对于不怎么改变的数据尽量使用 `localStorage` 存储，否则可以用 `sessionStorage` 存储。
