事件模型、深浅拷贝新加循环实现

--- a/master-interview/src/Javascript/事件模型.md
+++ b/master-interview/src/Javascript/事件模型.md
@@ -1,8 +1,91 @@
 ---
-order: 15  
+order: 15
 nav:
   title: 面试知识点
   path: /konwledge
 ---
 
 ## 事件模型
+
+### 事件流
+
+事件流是描述从页面接收到事件的顺序，分为两种：
+
+1. 事件冒泡流
+
+   冒泡是从下到上，沿着 DOM 结构往上，也就是说子元素先触发，父元素后触发；
+   <br>如果想组织事件冒泡，可以使用 stopPropagation()
+
+2. 事件捕获流
+
+   捕获是从上到下，沿着 DOM 结构往下，也就是父元素先触发，子元素后触发；
+
+![事件流](http://121.199.7.48/image/shijianliu.jpg)
+
+### 事件模型
+
+事件模型有三种，分别是 DOM0 级事件模型、IE 事件模型和 DOM2 级事件模型
+
+1. DOM0 级事件模型
+
+  在 DOM0 级事件模型中，事件是不会传播的，就是没有事件流的概念，这个模型里事件绑定监听函数有两种方式：
+
+  1. 在 HTML 代码中直接绑定
+      <br>比如说点击事件用 onclick 直接绑定：
+
+```
+  <input type="button" onclick="fun()">
+```
+  2. 通过 JS 代码指定属性值
+   <br>比如说点击事件在 js 中绑定 onclick 属性为一个处理函数
+
+```js
+var btn = document.getElementById('.btn');
+btn.onclick = fun;
+```
+<br>
+
+2. IE 事件模型
+
+   在 IE 事件模型中事件传播有两个阶段：
+
+    1. 事件处理阶段
+
+      事件到达目标元素, 触发目标元素的监听函数。
+    
+    2. 事件冒泡阶段
+
+      事件从目标元素冒泡到 document, 依次检查经过的节点是否绑定了事件监听函数，如果有则执行。
+  
+  这个模型里事件绑定监听函数的方法就是用`attachEvent()`，移除监听函数的话是用`detachEvent()`:
+
+```js
+  var btn = document.getElementById('.btn');
+  btn.attachEvent(‘onclick’, showMessage);
+  btn.detachEvent(‘onclick’, showMessage);
+```
+
+3. DOM2 级模型
+
+   在 DOM2 级模型中事件传播有两个阶段：
+
+    1. 事件捕获阶段
+
+        事件从 document 一直向下传播到目标元素, 依次检查经过的节点是否绑定了事件监听函数，如果有则执行。
+    
+    2. 事件处理阶段
+
+        事件到达目标元素, 触发目标元素的监听函数。
+
+    3. 事件冒泡阶段
+
+        事件从目标元素冒泡到 document, 依次检查经过的节点是否绑定了事件监听函数，如果有则执行。
+
+  
+  事件绑定监听函数的方式是用`addEventListener()`，移除绑定是用`removeEventLisenter()`
+
+```js
+var btn = document.getElementById('.btn');
+btn.addEventListener(‘click’, showMessage, false);
+btn.removeEventListener(‘click’, showMessage, false);
+```
