--- a/master-interview/src/Javascript/异步编程.md
+++ b/master-interview/src/Javascript/异步编程.md
@@ -332,3 +332,43 @@ console.log('1', a) // -> '1' 1
 - 因为 await 是异步操作，遇到await就会立即返回一个pending状态的Promise对象，暂时返回执行代码的控制权，使得函数外的代码得以继续执行，所以会先执行 console.log('1', a)
 - 这时候同步代码执行完毕，开始执行异步代码，将保存下来的值拿出来使用，这时候 a = 10
 - 然后后面就是常规执行代码了
+
+## 高频面试
+
+### 为什么js会阻塞页面加载
+这也是为什么说JS文件放在最下面的原因，那为什么会阻塞DOM解析呢
+
+由于 `JavaScript` 是可操纵 DOM 的,如果在修改这些元素属性同时渲染界面（即 `JavaScript` 线程和 `UI` 线程同时运行）,那么渲染线程前后获得的元素数据就可能不一致了
+
+因此为了防止渲染出现不可预期的结果,浏览器设置 「`GUI 渲染线程`与 `JavaScript 引擎`为互斥」的关系。
+当 `JavaScript `引擎执行时 `GUI` 线程会被`挂起`,`GUI `更新会被保存在一个队列中等到引擎线程`空闲`时立即被执行。
+
+当浏览器在执行 `JavaScript` 程序的时候,`GUI` 渲染线程会被保存在一个队列中,直到 JS 程序执行完成,才会接着执行。
+因此如果 JS 执行的时间过长,这样就会造成页面的渲染不连贯,导致页面渲染加载阻塞的感觉。
+
+另外，如果 JavaScript 文件中没有操作 DOM 相关代码，就可以将该 JavaScript 脚本设置为异步加载，通过 `async` 或 `defer` 来标记代码
+
+**defer 和 async 的区别 ?**
+- 两者都是异步去加载外部JS文件，不会阻塞DOM解析
+- Async是在外部JS加载完成后，浏览器空闲时，Load事件触发前执行，标记为async的脚本并不保证按照指定他们的先后顺序执行，该属性对于内联脚本无作用 (即没有「src」属性的脚本）。
+- defer是在JS加载完成后，整个文档解析完成后，触发 DOMContentLoaded 事件前执行，如果缺少 src 属性（即内嵌脚本），该属性不应被使用，因为这种情况下它不起作用
+。
+
+### css加载会造成阻塞嘛？
+先给出结论
+- CSS不会阻塞DOM`解析`，但会阻塞DOM`渲染`。
+- CSS会阻塞JS执行，并不会阻塞JS文件下载
+
+先讲一讲CSSOM作用
+- 第一个是提供给 JavaScript 操作样式表的能力
+- 第二个是为布局树的合成提供基础的样式信息这个 CSSOM 体现在 DOM 中就是`document.styleSheets`。
+
+DOM 和 CSSOM通常是并行构建的，所以`「CSS 加载不会阻塞 DOM 的解析」`。
+
+然而由于Render Tree 是依赖DOM Tree和 CSSOM Tree的，所以它必须等到两者都加载完毕后，完成相应的构建，才开始渲染，因此，`「CSS加载会阻塞DOM渲染」`。
+
+如果脚本的内容是获取元素的样式，宽高等CSS控制的属性，浏览器是需要计算的，也就是依赖于CSS。浏览器也无法感知脚本内容到底是什么，为避免样式获取，因而只好等前面所有的样式下载完后，再执行JS。
+
+`JS文件下载和CSS文件下载是并行`的，有时候CSS文件很大，所以JS需要等待。
+因此,样式表会在后面的 js 执行前先加载执行完毕,所以`「css 会阻塞后面 js 的执行」。`
+
