--- a/master-interview/src/Javascript/原型.md
+++ b/master-interview/src/Javascript/原型.md
@@ -6,21 +6,21 @@ nav:
 ---
 
 ## 原型
-每个函数都有 prototype 属性，除了 Function.prototype.bind()，该属性指向原型。
+每个函数都有 `prototype` 属性，除了 `Function.prototype.bind()`，该属性指向原型。
 
-每个对象都有与之关联的另外一个对象，那另外一个对象就是我们所熟知的原型， 每个对象都有 __proto__ 属性，指向了创建该对象的构造函数的原型。其实这个属性指向了 [[prototype]]，但是 [[prototype]] 是内部属性，我们并不能访问到，所以使用 _proto_ 来访问。
+每个对象都有与之关联的另外一个对象，那另外一个对象就是我们所熟知的原型， 每个对象都有 `__proto__` 属性，指向了创建该对象的构造函数的原型。其实这个属性指向了 `[[prototype]]`，但是 `[[prototype]]` 是内部属性，我们并不能访问到，所以使用` _proto_` 来访问。
 
-对象可以通过 __proto__ 来寻找不属于该对象的属性，__proto__ 将对象连接起来组成了原型链。
+对象可以通过` __proto__ `来寻找不属于该对象的属性，`__proto__` 将对象连接起来组成了原型链。
 
 ### prototype是如何产生的
-当我们声明一个函数时，这个属性就被自动创建了。并且这个属性的值是一个对象（也就是原型），只有一个属性 constructor
+当我们声明一个函数时，这个属性就被自动创建了。并且这个属性的值是一个对象（也就是原型），只有一个属性 `constructor`
 ``` js
 function Foo() {}
 Foo.prototype  ==> constructor：Foo 
 ```
 `constructor` 对应着构造函数，也就是 `Foo`。
 
-constructor 是一个公有且不可枚举的属性。一旦我们改变了函数的 prototype ，那么新对象就没有这个属性了（当然可以通过原型链取到 constructor）
+`constructor` 是一个公有且不可枚举的属性。一旦我们改变了函数的 `prototype` ，那么新对象就没有这个属性了（当然可以通过原型链取到 `constructor`）
 
 ``` js
 function Foo() {}
