feat：服务端渲染、react-合成事件、高频面试

--- a/master-interview/src/React/高频面试.md
+++ b/master-interview/src/React/高频面试.md
@@ -6,3 +6,13 @@ nav:
 ---
 
 ## 高频面试
+
+### 事件：阻止React事件冒泡，原生事件会执行吗？
+`答案：会；`
+
+因为原生事件先于合成事件执行 。注册的原生事件已经执行，而合成事件处于目标阶段，它阻止的冒泡只是阻止合成的事件冒泡，但是原生事件在捕获阶段就已经执行了.详情请见《合成事件》
+
+### 事件：合成事件和原生事件谁先响应？
+`答案：原生事件；`
+
+因为原生事件先于合成事件执行，且原生事件的捕获阶段是快于合成事件的冒泡阶段。详情请见《合成事件》
