feat：生命周期、样式处理

--- a/master-interview/src/React/高频面试.md
+++ b/master-interview/src/React/高频面试.md
@@ -15,4 +15,4 @@ nav:
 ### 事件：合成事件和原生事件谁先响应？
 `答案：原生事件；`
 
-因为原生事件先于合成事件执行，且原生事件的捕获阶段是快于合成事件的冒泡阶段。详情请见《合成事件》
+原生事件先于合成事件执行，因为合成事件没有捕获阶段，但是原生事件再捕获阶段已经执行了，所以原生事件比合成事件要快。详情请见《合成事件》
