--- a/master-interview/src/React/高频面试.md
+++ b/master-interview/src/React/高频面试.md
@@ -16,3 +16,23 @@ nav:
 `答案：原生事件；`
 
 原生事件先于合成事件执行，因为合成事件没有捕获阶段，但是原生事件再捕获阶段已经执行了，所以原生事件比合成事件要快。详情请见《合成事件》
+
+
+### setState概述(同步异步)
+```js
+//1. 两个参数及用法
+
+第一个参数可以是对象或者函数，是更新state   第二个参数获取最新的state,副作用操作，dom操作事件触发声明，数据获取，第三方库实例化
+
+//2. 同步/异步原理
+setState在合成事件和钩子函数中是异步的 
+	1.保证内容的一致性。
+	2.可以达到性能优化。
+	3.支持state在幕后渲染。
+在原生事件和setTimeout中是同步的
+
+setState的“异步”并不是说内部由异步代码实现，其实本身执行的过程和代码都是同步的，只是合成事件和钩子函数的调用顺序在更新之前，导致在合成事件和钩子函数中没法立马拿到更新后的值，形式了所谓的“异步”，当然可以通过第二个参数 setState(partialState, callback) 中的callback拿到更新后的结果。
+
+setState 的批量更新优化也是建立在“异步”（合成事件、钩子函数）之上的，在原生事件和setTimeout 中不会批量更新，在“异步”中如果对同一个值进行多次 setState ， setState 的批量更新策略会对其进行覆盖，取最后一次的执行，如果是同时 setState 多个不同的值，在更新时会对其进行合并批量更新。
+
+```
