--- a/master-interview/src/Javascript/事件循环.md
+++ b/master-interview/src/Javascript/事件循环.md
@@ -113,3 +113,83 @@ export default () => {
 - promise1 是 resolved 或 rejected ：那这个 task 就会放入当前事件循环回合的 microtask queue
 - promise1 是 pending：这个 task 就会放入 事件循环的未来的某个(可能下一个)回合的 microtask queue 中
 - setTimeout 的回调也是个 task ，它会被放入 macrotask queue 即使是 0ms 的情况
+
+
+### node.js中的非IO的异步API
+1. 定时器
+   - Node中的定时器和浏览器中用法一致
+   - 宏任务
+   
+2. process.nextTick()
+
+   - 将回调函数推入到下一次Tick，相比于定时器，它的复杂度较低，更高效
+   - 微任务
+
+3. setImmediate
+
+   - 也是将回调函数延迟执行，但是优先级方面，process.nextTick()中的回调函数执行的优先级要高于setImmediate()
+   - 宏任务
+   
+4. setTimeOut()和setImmediate()区别
+
+   setTimeOut()与setInterval()除了执行频次外基本相同，都表示主线程执行完一定时间后立即执行，而setImmediate()与之十分相似，也表示主线程执行完成后立即执行。那么他们之间的区别是什么呢？
+
+   代码如下：
+
+   ```js
+   setTimeout(function(){
+       console.log("setTimeout");
+   },0);
+   
+   setImmediate(function(){
+       console.log("setImmediate");
+   });
+   // 第一次测试结果: setTimeout,setImmediate
+   // 第二次测试结果: setTimeout,setImmediate
+   // 第三次测试结果: setImmediate,setTimeout
+   ```
+
+   两者都代表主线程完成后立即执行，其执行结果是不确定的，可能是setTimeout回调函数执行结果在前，也可能是setImmediate回调函数执行结果在前
+   
+   ```js
+   setTimeout(() => {
+     setTimeout(function(){
+       console.log("setTimeout");
+     },0);
+     
+     setImmediate(function(){
+       console.log("setImmediate");
+     });
+   }, 0);
+   // 第一次测试结果: setImmediate,setTimeout
+   // 第二次测试结果: setImmediate,setTimeout
+   // 第三次测试结果: setImmediate,setTimeout
+   ```
+   
+   总结
+   
+   - 如果两者都在主模块中调用,执行顺序取决于进程性能,也就是随机
+   - 如果两者不在主模块中调用(被一个异步操作包裹),那么setImmediate的回调永远先执行
+
+### 真题练习
+
+```js
+setImmediate(function(){
+    console.log(1);
+},0);
+setTimeout(function(){
+    console.log(2);
+},0);
+new Promise(function(resolve){
+    console.log(3);
+    resolve();
+    console.log(4);
+}).then(function(){
+    console.log(5);
+});
+console.log(6);
+process.nextTick(function(){
+    console.log(7);
+});
+console.log(8);
+```
