--- a/master-interview/src/Vue/高频面试题.md
+++ b/master-interview/src/Vue/高频面试题.md
@@ -1,12 +1,24 @@
 ---
-order: 4
+order: 1 
 nav:
   title: 面试知识点
   path: /konwledge
 ---
 
+## 高频面试
 
-### Vue中的key
+### computed 和 watch 的区别？
+
+computed是计算属性，使用场景主要是`依赖其他属性`，进行数据处理后得到新的属性并将该属性挂载到Vue实例上，而且还会监听该属性依赖属性的变化，从而更新该属性；而watch是监听`已存在的且已挂载到Vue实例的`数据，记录一种数据的`变化`，也就是说watch其实可以监听computed属性的变化。
+
+从使用场景来说，computed 主要用于对同步数据的处理，watch则主要用于观察某个值的变化然后去完成处理数据的过程。
+从数据影响来说，computed 适用一个数据被多个数据影响，而 watch 适用一个数据影响多个数据。
+
+所以说computed和watch有很大的相同点，就是都起到了监听数据并进行处理的作用；而他们还有个区别，就是computed是一个惰性求值的观察者，具有缓存性，只有当依赖变化后，`第一次访问`computed属性，才会计算新的值。而 watch 则是当数据发生变化`便会`调用执行函数。
+
+
+### key 的作用？
+
 Vue在渲染元素的时候有一个特点，就是它会利用`就地复用`的方式更高效地渲染元素，举个🌰：
 
 如果我们使用`v-if`动态切换两个组件，这两个组件都有`<input>`，这时候Vue在切换的时候是会复用同一个`<input>`的，也就是说，在切换前后，`<input>`是同一个哦；
